--- a/docs/manual/style/lang/es.xml
+++ b/docs/manual/style/lang/es.xml
@@ -1,6 +1,6 @@
-<?xml version="1.0" encoding="ISO-8859-1"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE language SYSTEM "../lang.dtd">
-<!-- English revision: 106753 -->
+<!-- English revision: 1659855 -->
 
 <!--
  Licensed to the Apache Software Foundation (ASF) under one or more
