allow expressions to be used in SetHandler. Opt-in with expr= prefix.
git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/trunk@1725149 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,9 @@
                                                          -*- coding: utf-8 -*-
 Changes with Apache 2.5.0
 
+  *) core: Add expression support to SetHandler.
+     [Eric Covener]
+
   *) mod_proxy_fcgi: Suppress HTTP error 503 and message 01075, 
      "Error dispatching request", when the cause appears to be 
      due to the client closing the connection. 
