Added many log numbers to log statements that had none.
Handled all files in modules/.

I used the coccinelle script provided by Stefan.


git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/trunk@1725392 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,8 @@
                                                          -*- coding: utf-8 -*-
 Changes with Apache 2.5.0
 
+  *) Added many log numbers to log statements that had none.
+
   *) mod_http2: fixed compile issues re cc's with builtin log2n, fixed cache
      digest calculation. [Stefan Eissing]
      
