ap_expr now allows kept_body() function to grab/use response body if stored in r->kept_body
git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/trunk@1725755 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,9 @@
                                                          -*- coding: utf-8 -*-
 Changes with Apache 2.5.0
 
+  *) ap_expr: expression support for r->kept_body if it exists.
+     [Jim Jagielski]
+
   *) mod_http2: bytes read/written on slave connections are reported via the
      optional mod_logio functions. Fixes PR 58871.
      
