--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,10 @@
                                                          -*- coding: utf-8 -*-
 Changes with Apache 2.5.0
 
+  *) mod_proxy_hcheck: Provide for dynamic background health
+     checks on reverse proxies associated with BalancerMember
+     workers. [Jim Jagielski]
+
   *) mod_ssl: handle TIMEOUT on empty SSL input as non-fatal, returning 
      APR_TIMEUP and preserving connection state for later retry.
      [Stefan Eissing]
