mod_filter: Fix AddOutputFilterByType with non-content-level filters. PR58856  (Micha Lenk)
git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/trunk@1726705 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,8 @@
                                                          -*- coding: utf-8 -*-
 Changes with Apache 2.5.0
+
+  *) mod_filter: Fix AddOutputFilterByType with non-content-level filters.
+     PR58856 [Micha Lenk <micha lenk.info>]
  
   *) mod_cache: Consider Cache-Control: s-maxage in expiration
      calculations.  [Eric Covener]
