--- a/CHANGES
+++ b/CHANGES
@@ -4,6 +4,7 @@ Changes with Apache 2.4.19
 
   *) mod_ssl: Save some TLS record (application data) fragmentations by
      including the last and subsequent suitable buckets when coalescing.
+     [Yann Ylavic]
 
   *) mod_proxy_fcgi: Suppress HTTP error 503 and message 01075, 
      "Error dispatching request", when the cause appears to be 
