correctly processing multiple rel values in Link headers, suppressing PUSH if nopush param is present in link header
git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/trunk@1727545 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,11 @@
                                                          -*- coding: utf-8 -*-
 Changes with Apache 2.5.0
 
+  *) mod_http2: allowing link header to specify multiple "rel" values, 
+     space-separated inside a quoted string. Prohibiting push when Link parameter
+     "nopush" is present.
+     [Stefan Eissing]
+
   *) core: Prevent a server crash in case of an invalid CONNECT request with
      a custom error page for status code 400 that uses server side includes.
      PR 58929 [Ruediger Pluem]
