--- a/docs/manual/style/lang/fr.xml
+++ b/docs/manual/style/lang/fr.xml
@@ -21,7 +21,7 @@
 
 <language id="fr">
     <name>French</name>
-    <charset>ISO-8859-1</charset>
+    <charset>UTF-8</charset>
     <source-ext>.xml.fr</source-ext>
     <target-ext>.html.fr</target-ext>
 
