charset returns to ISO-8859-1.
git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/trunk@1727736 13f79535-47bb-0310-9956-ffa450edef68

--- a/docs/manual/style/lang/fr.xml
+++ b/docs/manual/style/lang/fr.xml
@@ -21,7 +21,7 @@
 
 <language id="fr">
     <name>French</name>
-    <charset>UTF-8</charset>
+    <charset>ISO-8859-1</charset>
     <source-ext>.xml.fr</source-ext>
     <target-ext>.html.fr</target-ext>
 
