--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,10 @@
                                                          -*- coding: utf-8 -*-
 Changes with Apache 2.5.0
 
+  *) core: fix a bug in <UnDefine ...> directive processing. When used, the last
+     <Define...>'ed variable was also withdrawn. PR 59019
+     [Christophe Jaillet]
+
   *) mod_http2: limiting the amount of h2 workers a HTTP/2 connection can
      occupy at a time to make DoS life harder. Limiting this to static 6 in
      honor of http/1.1 connection limits, considering implementing dynamic
@@ -8,7 +12,7 @@ Changes with Apache 2.5.0
      This does *not* limit the number of streams a client may open, rather the
      number of server threads a connection might use.
      [Stefan Eissing]
-     
+
   *) mod_auth_digest: Fix compatibility with expression-based Authname. PR59039.
      [Eric Covener]
 
